# ADE_Applicaton

./: ADE  CMakeLists.txt  process_data.txt
include/: ADE.hpp  parser.hpp
src/: ADE.cpp  main.cpp  parser.cpp
